--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <body>
     <h1>Hello World</h1>
-    <p>I'm Uliza's docs, hosted with GitHub Pages.</p>
+    <p>I'm a test page hosted with GitHub Pages.</p>
 </body>
 
 </html>
