--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <body>
     <h1>Hello World</h1>
-    <p>I'm a test page hosted with GitHub Pages.</p>
+    <p>V2 I'm a test page hosted with GitHub Pages.</p>
 </body>
 
 <div class="deque-expander" id="gettysburg">
